Revature Meusic Store - P1/force-app/main/default/objects/Student__c/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <label>Classes</label>
    <referenceTo>Revature_Music_Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>