Revature Meusic Store - P1/force-app/main/default/objects/Student__c/fields/Completed_Class_1__c.field-meta.xml
<CustomField>
    <fullName>Completed_Class_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Class 1</label>
    <referenceTo>Revature_Music_Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>