Revature Meusic Store - P1/force-app/main/default/objects/Student__c/fields/Completed_Class_2__c.field-meta.xml
<CustomField>
    <fullName>Completed_Class_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Class 2</label>
    <referenceTo>Revature_Music_Class__c</referenceTo>
    <relationshipLabel>Students (Completed Class 2)</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <type>Lookup</type>
</CustomField>