Revature Meusic Store - P1/force-app/main/default/objects/Student__c/fields/Completed_Class_3__c.field-meta.xml
<CustomField>
    <fullName>Completed_Class_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Class 3</label>
    <referenceTo>Revature_Music_Class__c</referenceTo>
    <relationshipLabel>Students (Completed Class 3)</relationshipLabel>
    <relationshipName>Students2</relationshipName>
    <type>Lookup</type>
</CustomField>